# PulseBar

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: index.html
src/: App.css  App.jsx  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: BarChart.jsx  BigStat.jsx  MetricRow.jsx  ProcessList.jsx  RingChart.jsx
src/panels/: CPUPanel.jsx  DiskPanel.jsx  MemPanel.jsx  NetPanel.jsx
