[package]
name = "pulsebar"
version = "1.0.1"
description = "PulseBar — macOS menu bar system monitor"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(cargo_clippy)'] }

